// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`timeline/LocalTrack with a memory track matches the snapshot of the memory track 1`] = `
<li
  className="timelineTrack timelineTrackLocal"
>
  <div
    className="timelineTrackRow timelineTrackLocalRow"
    onClick={[Function]}
  >
    <div
      className="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
      onContextMenu={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      title="My Description"
    >
      <button
        className="timelineTrackNameButton"
        type="button"
      >
        Memory
      </button>
    </div>
    <div
      className="timelineTrackTrack"
    >
      <div
        className="timelineTrackMemory"
        onMouseLeave={[Function]}
        onMouseMove={[Function]}
        style={
          Object {
            "height": 25,
          }
        }
      >
        <canvas
          className="timelineTrackMemoryCanvas"
        />
        <div
          className="timelineEmptyThreadIndicator"
        />
      </div>
    </div>
  </div>
</li>
`;

exports[`timeline/LocalTrack with a network track matches the snapshot of the network track 1`] = `
<li
  className="timelineTrack timelineTrackLocal"
>
  <div
    className="timelineTrackRow timelineTrackLocalRow"
    onClick={[Function]}
  >
    <div
      className="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
      onContextMenu={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      title={null}
    >
      <button
        className="timelineTrackNameButton"
        type="button"
      >
        Network
      </button>
    </div>
    <div
      className="timelineTrackTrack"
    >
      <div
        className="timelineTrackNetwork"
        style={
          Object {
            "height": 35,
          }
        }
      >
        <canvas
          className="timelineTrackNetworkCanvas"
        />
      </div>
    </div>
  </div>
</li>
`;

exports[`timeline/LocalTrack with a thread track matches the snapshot of a local track 1`] = `
<li
  className="timelineTrack timelineTrackLocal"
>
  <div
    className="timelineTrackRow timelineTrackLocalRow"
    onClick={[Function]}
  >
    <div
      className="react-contextmenu-wrapper timelineTrackLabel timelineTrackLocalLabel timelineTrackLocalGrippy"
      onContextMenu={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      title="thread: \\"DOM Worker\\" (0)
process: \\"tab\\" (222)"
    >
      <button
        className="timelineTrackNameButton"
        type="button"
      >
        DOM Worker
      </button>
    </div>
    <div
      className="timelineTrackTrack"
    >
      <div
        className="timelineTrackThread"
      >
        <div
          className="timelineTrackThreadMarkerOverview"
        >
          <canvas
            className="timelineMarkersCanvas"
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseUp={[Function]}
          />
        </div>
        <div
          className="threadActivityGraph"
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
        >
          <canvas
            className="threadActivityGraphCanvas threadActivityGraphCanvas"
            onMouseUp={[Function]}
          />
        </div>
        <div
          className="timelineEmptyThreadIndicator"
        />
      </div>
    </div>
  </div>
</li>
`;
